examples/test/testpolicy17966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17966
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value7
          key43: value46
          key5: value41
      podSelector:
        matchLabels:
          key45: value13
          key1: value0
          key37: value38
